Fix button size on mobile.

--- a/style.css
+++ b/style.css
@@ -447,6 +447,13 @@ input[type=image]{
 	--head-pad-top: 3.911vw;
 }
 
+@media screen and (max-width: 300px) {
+	.kt-don-but {
+		font-size: 10px;
+		letter-spacing: 3px;
+	}
+}
+
 @media screen and (max-width: 767px) {
 	.header-image {
 		border: none;
@@ -475,13 +482,13 @@ input[type=image]{
 		margin-top: 0;
 	}
 
-
 	#masthead > a {
 		margin-left: var(--head-mob-lr-margin);
 		margin-right: 6vw;
 	}
 	#header-text-nav-container {
 		margin-right:  var(--head-mob-lr-margin);
+		top: calc(-500vw / 467 + ((767px * 5) / 467) );
 	}
 	.kt-don-menu {
 		margin-right: 2vw;
@@ -507,10 +514,10 @@ input[type=image]{
 	.kt-don-but {
 		/* Height is 60 px @ screen width 767 px. */
 		height: calc(60vw / 7.67);
-		/* Font size is 20 px @ screen width 767 px. */
-		font-size: calc(20vw / 7.67);
-		
-		letter-spacing: 5px;
+		/* Font size is 20 px @ screen width 767 px and 10 px @ screen width 300 px and below. */
+		font-size: calc(100vw / 46.7 + (20px - (767px / 46.7) ));
+		/* Letter spacing is 5 px @ screen width 767 px and 3 px @ screen width 300 px and below. */
+		letter-spacing: calc(200vw / 467 + (5px - ((767px * 2) / 467) ));
 		border-radius: 50px;
 	}
 
